Symfony: upgrade to 4.4
- upgrade nodeJS on docker
- upgrade JS packages
- fix composer.json
- fix bin/console && public/index
- update tests
- add php CS fixer
- fix deprecated issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,10 @@ install:
 script:
   - bin/console lint:twig templates
   - bin/console lint:yaml config
-  - vendor/bin/phpunit
-  - vendor/bin/phpunit --coverage-clover build/coverage/xml
   - bin/console security:check
-
-after_script:
-  - vendor/bin/codacycoverage clover build/coverage/xml
+  - yarn install
+  - yarn encore dev
+  - bin/phpunit
 
 notifications:
   email:
