--- a/docker/dev/nodejs/Dockerfile
+++ b/docker/dev/nodejs/Dockerfile
@@ -1,15 +1,12 @@
-FROM node:6.11
+FROM node:stretch-slim
 
 COPY . /usr/local/docker
 RUN chmod -R 777 /usr/local/docker
 
-RUN apt-get update && apt-get install -y \
-        vim
-
-RUN npm install socket.io -g
-RUN npm install forever -g
-RUN npm install forever-monitor
-RUN npm install forever-monitor
-RUN npm install -g yarn
+RUN apt-get update --fix-missing && apt-get install -y python make g++ vim \
+&& npm install socket.io -g \
+&& npm install forever -g \
+&& npm install forever-monitor \
+&& npm install -g yarn
 
 ENTRYPOINT ["/usr/local/docker/run.sh"]
