--- a/docker/dev/web/extra/vhosts/aml87.conf
+++ b/docker/dev/web/extra/vhosts/aml87.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-    ServerName aml87.dev
-    ServerAlias www.aml87.dev
+    ServerName aml87.local
+    ServerAlias www.aml87.local
 
     AddDefaultCharset UTF-8
     DocumentRoot /var/www/aml87/public
@@ -169,8 +169,8 @@
 </VirtualHost>
 
 <VirtualHost _default_:443>
-    ServerName aml87.dev
-    ServerAlias www.aml87.dev
+    ServerName aml87.local
+    ServerAlias www.aml87.local
 
     AddDefaultCharset UTF-8
     DocumentRoot /var/www/aml87/public
@@ -193,8 +193,8 @@
 
      <IfModule mod_ssl.c>
         SSLEngine On
-        SSLCertificateFile /etc/apache2/aml87.crt
-        SSLCertificateKeyFile /etc/apache2/aml87.key
+        SSLCertificateFile /etc/apache2/ssl/crt/aml87.crt
+        SSLCertificateKeyFile /etc/apache2/ssl/key/aml87.key
     </IfModule>
 
     <IfModule mod_deflate.c>
