--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,13 @@
 !/var/cache
 /var/cache/*
 !var/cache/.gitkeep
-!/var/logs
-/var/logs/*
-!var/logs/.gitkeep
+!/var/log
+/var/log/*
+!var/log/.gitkeep
 !/var/sessions
 /var/sessions/*
 !var/sessions/.gitkeep
 
-# Parameters
-/app/config/parameters.yml
 
 # Managed by Composer
 /var/bootstrap.php.cache
@@ -29,7 +27,6 @@
 !public/uploads/images/.gitkeep
 /public/media/
 !public/media/.gitkeep
-/web/css/
 
 # Build data
 /public/build/
@@ -37,7 +34,6 @@
 
 # Composer PHAR
 /composer.phar
-/composer.lock
 
 # node modules
 /node_modules
@@ -45,16 +41,6 @@
 # Docker
 /docker-env
 /docker-compose.yml
-
-###> phpunit/phpunit ###
-/phpunit.xml
-###< phpunit/phpunit ###
-
-###> symfony/phpunit-bridge ###
-.phpunit
-/phpunit.xml
-###< symfony/phpunit-bridge ###
-
 ###> symfony/framework-bundle ###
 /.env
 /public/bundles/*
@@ -62,22 +48,26 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-
-###> symfony/webpack-encore-pack ###
-/node_modules/
-/public/assets/*
-!public/assets/.gitkeep
-npm-debug.log
-yarn-error.log
-###< symfony/webpack-encore-pack ###
-
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+/.vscode
+
