--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,16 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+      "App\\Tests\\": "tests/"
     }
   },
   "require": {
     "php": ">=7.1.0",
     "symfony/swiftmailer-bundle": "^3.2",
     "symfony/monolog-bundle": "^3.3",
-    "symfony/dependency-injection": "^4.1",
-    "symfony/framework-bundle": "^4.1",
-    "symfony/security-bundle": "^4.1",
+    "symfony/dependency-injection": "*",
+    "symfony/framework-bundle": "*",
+    "symfony/security-bundle": "*",
     "symfony/security-acl": "^3.0",
     "symfony/polyfill-apcu": "^1.6",
     "doctrine/dbal": "^2.5",
@@ -38,62 +38,65 @@
     "knplabs/knp-menu-bundle": "^2.2",
     "twig/twig": "^2.4",
     "sentry/sentry-symfony": "^2.0",
-    "symfony/flex": "^1.1",
+    "symfony/flex": "^1.6",
     "symfony/orm-pack": "^1.0",
-    "symfony/twig-bundle": "^4.1",
-    "symfony/form": "^4.1",
-    "symfony/translation": "^4.1",
-    "symfony/validator": "^4.1",
+    "symfony/twig-bundle": "*",
+    "symfony/form": "*",
+    "symfony/translation": "*",
+    "symfony/validator": "*",
     "liip/imagine-bundle": "^2.0",
-    "symfony/webpack-encore-pack": "^1.0",
     "friendsofsymfony/ckeditor-bundle": " ^2.0",
     "friendsofsymfony/user-bundle": "^2.1",
-    "symfony/templating": "^4.1",
+    "symfony/templating": "*",
     "doctrine/doctrine-migrations-bundle": "^1.3",
-    "sensiolabs/security-checker": "^4.1",
-    "symfony/yaml": "^4.1",
+    "symfony/yaml": "*",
     "twig/extensions": "^1.5",
     "easycorp/easyadmin-bundle": "^2.0",
-    "symfony/webpack-encore-bundle": "^1.0"
+    "symfony/webpack-encore-bundle": "^1.0",
+    "symfony/dotenv": "*"
   },
   "require-dev": {
-    "symfony/phpunit-bridge": "^3.1",
-    "phpunit/phpunit": "^7.1",
-    "nelmio/alice": "^3.1",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
-    "symfony/dotenv": "^4.1",
+    "friendsofphp/php-cs-fixer": "^2.16",
+    "nelmio/alice": "^3.5",
+    "roave/security-advisories": "dev-master",
+    "sensiolabs/security-checker": "^6.0",
     "symfony/maker-bundle": "^1.7",
     "symfony/profiler-pack": "^1.0",
-    "symfony/web-server-bundle": "^4.1",
-    "symfony/browser-kit": "^3.1",
-    "symfony/css-selector": "^3.1",
-    "phpstan/phpstan-shim": "^0.9.2",
-    "codacy/coverage": "dev-master"
+    "symfony/test-pack": "^1.0",
+    "symfony/web-server-bundle": "^4.1"
   },
   "scripts": {
     "auto-scripts": {
-      "cache:clear": "symfony-cmd",
+      "cache:clear --no-warmup": "symfony-cmd",
+      "cache:warmup": "symfony-cmd",
       "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd",
       "security-checker security:check": "script"
-    }
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
   },
   "conflict": {
     "symfony/symfony": "*"
   },
   "extra": {
-    "symfony-app-dir": "app",
-    "symfony-bin-dir": "bin",
-    "symfony-var-dir": "var",
-    "symfony-web-dir": "web",
-    "symfony-tests-dir": "tests",
     "symfony": {
-      "allow-contrib": true
+      "allow-contrib": false,
+      "require": "4.4.*"
     }
   },
   "config": {
+    "optimize-autoloader": true,
+    "preferred-install": {
+      "*": "dist"
+    },
     "platform": {
       "php": "7.1.99"
-    }
+    },
+    "sort-packages": true
   }
 }
