--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.22.2",
-    "bootstrap": "^4.1.1",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.9.2",
-    "popper.js": "^1.14.6",
-    "sass-loader": "^7.0.3"
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
+    "@symfony/webpack-encore": "^0.22.2",
+    "bootstrap": "^4.1.1",
     "cd-pretty-photo": "^0.0.3",
-    "dev": "^0.1.3",
+    "chart.js": "^2.9.3",
+    "core-js": "3",
+    "jquery": "^3.3.1",
     "mdbootstrap": "^4.7.0",
-    "node-sass-css-importer": "^0.0.3"
+    "node-sass": "^4.9.2",
+    "popper.js": "^1.14.6",
+    "sass-loader": "^7.3.1"
   },
   "license": "UNLICENSED",
   "private": true,
