--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,8 @@
 twig:
-    paths: ['%kernel.project_dir%/templates']
+    default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    exception_controller: null
     form_themes:
         - 'form/material_design_layout.html.twig'
         - 'bootstrap_4_layout.html.twig'
