--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,6 @@
     "nelmio/alice": "^3.5",
     "phpstan/phpstan": "^0.12.14",
     "roave/security-advisories": "dev-master",
-    "sensiolabs/security-checker": "^6.0",
     "symfony/maker-bundle": "^1.7",
     "symfony/profiler-pack": "^1.0",
     "symfony/test-pack": "^1.0",
@@ -71,8 +70,7 @@
     "auto-scripts": {
       "cache:clear --no-warmup": "symfony-cmd",
       "cache:warmup": "symfony-cmd",
-      "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-      "security-checker security:check": "script"
+      "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
     },
     "post-install-cmd": [
       "@auto-scripts"
