--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
-language: php
+language: php, node_js
 sudo: false
 
 php:
   - '7.1'
+node_js:
+  - 12
+
+cache: yarn
 
 before_install:
+  - cat /etc/*-release
+  - sudo apt-get install -y curl
+  - curl -sL https://deb.nodesource.com/setup_12.x | sudo bash -
+  - sudo apt-get install -y nodejs
+  - nodejs --version
+  - nvm use system
+  - sudo npm install -g yarn
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - composer self-update
 
