Docker: upgrade PHP 7.4
- upgrade to PHP 7.4
- fix custom php settings
- clean Makefile

--- a/docker/dev/web/Dockerfile
+++ b/docker/dev/web/Dockerfile
@@ -1,71 +1,40 @@
-FROM php:7.1-apache
+FROM php:7.4-apache
 
-MAINTAINER Aurélien GIRY <aurelien.giry@gmail.com>
+LABEL org.opencontainers.image.authors="Aurélien GIRY <aurelien.giry@gmail.com>"
+LABEL org.opencontainers.image.title="Custom PHP 7.4 image for Relight Admin application."
 
 COPY . /usr/local/docker
 RUN chmod -R 777 /usr/local/docker
 
-RUN apt-get update && apt-get install -y \
-        libxml2-dev \
-        libxml2-utils \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
-        libjpeg-dev \
-        libpng-dev \
-        vim \
-        default-mysql-client \
-        telnet \
-        netcat \
-        wget \
-        git \
-        libicu-dev \
-        python-pip \
-        python-dev \
-        ssl-cert
-
-RUN docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr --with-freetype-dir=/usr/
-
-RUN docker-php-ext-install soap gd zip intl opcache pdo pdo_mysql mysqli mbstring calendar
-
-RUN pecl install xdebug
-
-RUN docker-php-ext-enable xdebug opcache calendar
+RUN apt-get update && apt-get install -y libxml2-dev libxml2-utils libfreetype6-dev libjpeg62-turbo-dev libjpeg-dev \
+    libpng-dev vim nano default-mysql-client telnet netcat wget git libicu-dev ssl-cert iproute2 zip unzip libwebp-dev libzip-dev librabbitmq-dev \
+    && docker-php-ext-configure gd --with-jpeg --with-freetype --with-webp \
+    && docker-php-ext-install soap gd zip intl opcache pdo pdo_mysql mysqli calendar bcmath sockets json \
+    && pecl install apcu xdebug amqp \
+    && docker-php-ext-enable apcu opcache calendar xdebug amqp
 
 # Apache modules
 RUN a2enmod ssl expires headers rewrite
 
-# Sphinx documentation
-RUN pip install sphinx sphinx-autobuild sphinx_rtd_theme sphinxcontrib-phpdomain git+https://github.com/fabpot/sphinx-php.git
-
-# Composer
-RUN \
-    curl -sS https://getcomposer.org/installer | php && \
-    mv composer.phar /usr/local/bin/composer
-
-# Install phpunit
-RUN \
-    wget https://phar.phpunit.de/phpunit.phar && \
-    chmod +x phpunit.phar && \
-    mv phpunit.phar /usr/local/bin/phpunit 
-
-# RUN echo 'date.timezone = Europe/Paris' >> /etc/php/7.1/cli/php.ini
-# RUN echo 'date.timezone = Europe/Paris' >> /etc/php/7.1/apache2/php.ini
-
-RUN pecl update-channels
-
-# Blackfire extension
+# Install the Blackfire PHP probe
+# @see https://blackfire.io/docs/php/integrations/php-docker
 RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
-    && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
-    && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
-    && mv /tmp/blackfire-*.so $(php -r "echo ini_get('extension_dir');")/blackfire.so \
-    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini
+    && architecture=$(case $(uname -m) in i386 | i686 | x86) echo "i386" ;; x86_64 | amd64) echo "amd64" ;; aarch64 | arm64 | armv8) echo "arm64" ;; *) echo "amd64" ;; esac) \
+    && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/$architecture/$version \
+    && mkdir -p /tmp/blackfire \
+    && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp/blackfire \
+    && mv /tmp/blackfire/blackfire-*.so $(php -r "echo ini_get ('extension_dir');")/blackfire.so \
+    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini \
+    && rm -rf /tmp/blackfire /tmp/blackfire-probe.tar.gz
 
-# Blackfire CLI
-RUN mkdir -p /tmp/blackfire \
-    && curl -A "Docker" -L https://blackfire.io/api/v1/releases/client/linux_static/amd64 | tar zxp -C /tmp/blackfire \
-    && mv /tmp/blackfire/blackfire /usr/bin/blackfire \
-    && rm -Rf /tmp/blackfire
+# Assign a new UID/GID to avoid using a generated value
+RUN \
+    usermod -u 1000 www-data && \
+    groupmod -g 1000 www-data
 
-RUN usermod -u 1000 www-data
+# Install Composer globally
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+ENV COMPOSER_ALLOW_SUPERUSER 1
+ENV COMPOSER_MEMORY_LIMIT -1
 
 ENTRYPOINT ["/usr/local/docker/run.sh"]
