Symfony: update & asser update

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,6 @@
     "twig/twig": "^2.4",
     "sentry/sentry-symfony": "^2.0",
     "symfony/flex": "^1.6",
-    "symfony/orm-pack": "^1.0",
     "symfony/twig-bundle": "*",
     "symfony/form": "*",
     "symfony/translation": "*",
@@ -64,10 +63,14 @@
     "phpstan/phpstan-doctrine": "^0.12.32",
     "phpstan/phpstan-phpunit": "^0.12.17",
     "phpstan/phpstan-symfony": "^0.12.20",
+    "phpunit/phpunit": "^7.5",
     "roave/security-advisories": "dev-master",
+    "symfony/browser-kit": "4.4.*",
+    "symfony/css-selector": "4.4.*",
     "symfony/maker-bundle": "^1.7",
-    "symfony/profiler-pack": "^1.0",
-    "symfony/test-pack": "^1.0",
+    "symfony/phpunit-bridge": "^6.0",
+    "symfony/stopwatch": "4.4.*",
+    "symfony/web-profiler-bundle": "4.4.*",
     "symfony/web-server-bundle": "^4.1"
   },
   "scripts": {
