Symfony: update packages & fix deprecated

--- a/.gitignore
+++ b/.gitignore
@@ -48,10 +48,6 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-###> symfony/web-server-bundle ###
-/.web-server-pid
-###< symfony/web-server-bundle ###
-
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 npm-debug.log
@@ -59,8 +55,7 @@ yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 
 ###> friendsofphp/php-cs-fixer ###
-/.php_cs
-/.php_cs.cache
+/.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
 
 ###> symfony/phpunit-bridge ###
