--- a/composer.json
+++ b/composer.json
@@ -17,61 +17,59 @@
     }
   },
   "require": {
-    "php": ">=7.1.0",
-    "symfony/swiftmailer-bundle": "^3.2",
-    "symfony/monolog-bundle": "^3.3",
-    "symfony/dependency-injection": "*",
-    "symfony/framework-bundle": "*",
-    "symfony/security-bundle": "*",
-    "symfony/security-acl": "^3.0",
-    "symfony/polyfill-apcu": "^1.6",
-    "doctrine/dbal": "^2.5",
-    "doctrine/orm": "^2.5",
-    "doctrine/doctrine-bundle": "^1.8",
-    "doctrine/doctrine-cache-bundle": "^1.3",
-    "sensio/framework-extra-bundle": "^5.1",
-    "incenteev/composer-parameter-handler": "^2.1",
-    "google/apiclient": "^2.1",
+    "php": ">=7.3.0",
     "dms/dms-filter-bundle": "^2.0",
+    "doctrine/dbal": "^2.5",
+    "doctrine/doctrine-bundle": "^2.0",
+    "doctrine/doctrine-migrations-bundle": "^2.1",
+    "doctrine/orm": "^2.7",
+    "easycorp/easyadmin-bundle": "^2.0",
+    "friendsofsymfony/ckeditor-bundle": " ^2.0",
+    "friendsofsymfony/user-bundle": "^2.1",
+    "google/apiclient": "^2.1",
+    "incenteev/composer-parameter-handler": "^2.1",
     "jms/serializer": "^1.10",
     "knplabs/knp-menu": "^2.3",
     "knplabs/knp-menu-bundle": "^2.2",
-    "twig/twig": "^2.4",
-    "sentry/sentry-symfony": "^2.0",
-    "symfony/flex": "^1.6",
-    "symfony/twig-bundle": "*",
-    "symfony/form": "*",
-    "symfony/translation": "*",
-    "symfony/validator": "*",
     "liip/imagine-bundle": "^2.0",
-    "friendsofsymfony/ckeditor-bundle": " ^2.0",
-    "friendsofsymfony/user-bundle": "^2.1",
+    "sensio/framework-extra-bundle": "^5.5",
+    "sentry/sentry-symfony": "^2.0",
+    "symfony/dependency-injection": "*",
+    "symfony/dotenv": "*",
+    "symfony/flex": "^1.6",
+    "symfony/form": "*",
+    "symfony/framework-bundle": "*",
+    "symfony/monolog-bundle": "^3.3",
+    "symfony/polyfill-apcu": "^1.6",
+    "symfony/security-acl": "^3.0",
+    "symfony/security-bundle": "*",
+    "symfony/swiftmailer-bundle": "^3.2",
     "symfony/templating": "*",
-    "doctrine/doctrine-migrations-bundle": "^1.3",
-    "symfony/yaml": "*",
-    "twig/extensions": "^1.5",
-    "easycorp/easyadmin-bundle": "^2.0",
+    "symfony/translation": "*",
+    "symfony/twig-bundle": "*",
+    "symfony/validator": "*",
     "symfony/webpack-encore-bundle": "^1.0",
-    "symfony/dotenv": "*"
+    "symfony/yaml": "*",
+    "twig/twig": "^2.4"
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.0",
-    "friendsofphp/php-cs-fixer": "^2.16",
+    "friendsofphp/php-cs-fixer": "^3.0",
     "nelmio/alice": "^3.5",
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan": "^0.12.78",
     "phpstan/phpstan-doctrine": "^0.12.32",
     "phpstan/phpstan-phpunit": "^0.12.17",
     "phpstan/phpstan-symfony": "^0.12.20",
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^9.5",
+    "spatie/phpunit-watcher": "^1.23",
     "roave/security-advisories": "dev-master",
-    "symfony/browser-kit": "4.4.*",
-    "symfony/css-selector": "4.4.*",
+    "symfony/browser-kit": "*",
+    "symfony/css-selector": "*",
     "symfony/maker-bundle": "^1.7",
     "symfony/phpunit-bridge": "^6.0",
-    "symfony/stopwatch": "4.4.*",
-    "symfony/web-profiler-bundle": "4.4.*",
-    "symfony/web-server-bundle": "^4.1"
+    "symfony/stopwatch": "*",
+    "symfony/web-profiler-bundle": "*"
   },
   "scripts": {
     "auto-scripts": {
@@ -109,7 +107,7 @@
       "*": "dist"
     },
     "platform": {
-      "php": "7.1.99"
+      "php": "7.4"
     },
     "sort-packages": true
   }
