--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -15,6 +15,7 @@ framework:
     php_errors:
         log: true
 
+    # Keep for FosUserBundle
     templating:
         engines: ['twig']
     cache:
