--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -32,4 +32,96 @@
 #                background:
 #                    size:     [256, 256]
 #                    position: center
+#
 #                    color:    '#fff'
+# Liip Imagine
+liip_imagine:
+    twig:
+        mode: lazy
+    filter_sets:
+        cache: ~
+        thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [150, 150], mode: inset }
+        vignette_thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [150, 100], mode: inbox }
+        avatar_thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [80, 80], mode: inbox }
+        moyen_thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [50, 50], mode: inbox }
+        mini_thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [28, 28], mode: inbox }
+        micro_thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [14, 14], mode: inbox }
+        big_thumbnail:
+            quality: 75
+            filters:
+                thumbnail: { size: [300, 300], mode: inbox }
+        admin_thumbnail:
+            quality: 75
+            filters:
+                relative_resize: {  widen: 150, mode: outbound }
+
+        # Evenement
+        evenement_view:
+             quality: 75
+             filters:
+                relative_resize: {  widen: 588, mode: outbound }
+
+        evenement_list:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 450, mode: outbound }
+
+        # Discography
+        discography_view:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 588, mode: outbound }
+
+        discography_list:
+             quality: 75
+             filters:
+                  thumbnail: { size: [180, 160], mode: outbound }
+
+        # Blog
+        blog_list:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 588, mode: outbound }
+        blog_view:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 170, mode: outbound }
+        blog_thumbnail:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 425, mode: outbound }
+
+        # Partenaires
+        partenaire_view:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 500, mode: outbound }
+
+        partenaire_thumbnail:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 120, mode: outbound }
+
+        # Modal
+        modal_img:
+             quality: 75
+             filters:
+                   relative_resize: {  widen: 900, mode: outbound }
