--- a/composer.json
+++ b/composer.json
@@ -57,13 +57,14 @@
     "friendsofphp/php-cs-fixer": "^3.0",
     "nelmio/alice": "^3.5",
     "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan": "^0.12.78",
-    "phpstan/phpstan-doctrine": "^0.12.32",
-    "phpstan/phpstan-phpunit": "^0.12.17",
-    "phpstan/phpstan-symfony": "^0.12.20",
+    "phpstan/phpstan": "^1.2",
+    "phpstan/phpstan-doctrine": "^1.0",
+    "phpstan/phpstan-phpunit": "^1.0",
+    "phpstan/phpstan-symfony": "^1.0",
     "phpunit/phpunit": "^9.5",
-    "spatie/phpunit-watcher": "^1.23",
+    "rector/rector": "^0.12.9",
     "roave/security-advisories": "dev-master",
+    "spatie/phpunit-watcher": "^1.23",
     "symfony/browser-kit": "*",
     "symfony/css-selector": "*",
     "symfony/maker-bundle": "^1.7",
