--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
     "twig/twig": "^2.4"
   },
   "require-dev": {
+    "dama/doctrine-test-bundle": "^6.7",
     "doctrine/doctrine-fixtures-bundle": "^3.0",
     "friendsofphp/php-cs-fixer": "^3.0",
     "nelmio/alice": "^3.5",
