--- a/config/packages/test/doctrine.yaml
+++ b/config/packages/test/doctrine.yaml
@@ -3,6 +3,8 @@ doctrine:
         # configure these for your database server
         driver: 'pdo_sqlite'
         charset: utf8mb4
+        memory: true
 
         # With Symfony 3.3, remove the `resolve:` prefix
         url: 'sqlite:///%kernel.project_dir%/var/aml-test.db'
+        #url: "sqlite:///:memory:"
