--- a/docker/dev/nodejs/Dockerfile
+++ b/docker/dev/nodejs/Dockerfile
@@ -1,12 +1,9 @@
-FROM node:stretch-slim
+FROM node:14-stretch-slim
 
 COPY . /usr/local/docker
 RUN chmod -R 777 /usr/local/docker
 
-RUN apt-get update --fix-missing && apt-get install -y python make g++ vim \
-&& npm install socket.io -g \
-&& npm install forever -g \
-&& npm install forever-monitor \
-&& npm install -g yarn
+RUN apt-get update \
+&& apt-get install -y python make g++ vim
 
 ENTRYPOINT ["/usr/local/docker/run.sh"]
