PhpStan: fix phpstan issue

--- a/.github/workflows/aml87-ci.yml
+++ b/.github/workflows/aml87-ci.yml
@@ -65,8 +65,8 @@ jobs:
       #  run: vendor/bin/phpmd src,tests text .phpmd-ruleset.xml
 
       # https://github.com/phpstan/phpstan
-#      - name: Analyse PHP Code (PHPStan)
-#        run: vendor/bin/phpstan analyse src
+      - name: Analyse PHP Code (PHPStan)
+        run: composer phpstan
 
       - uses: actions/setup-node@v2
         with:
