--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,7 @@
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        App\Entity\User:
+            algorithm: bcrypt
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
@@ -12,15 +13,17 @@ security:
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: lazy
 
             # activate different ways to authenticate
 
@@ -29,11 +32,14 @@ security:
 
             # form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
-            provider: fos_userbundle
-            switch_user:
-               provider: fos_userbundle
+            provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\AppAuthenticator
+            #switch_user:
+            #   provider: app_user_provider
             form_login:
-               provider: fos_userbundle
+               provider: app_user_provider
                csrf_token_generator: security.csrf.token_manager
             logout:
                 path: app_members_area_logout
