Security: add custum user manage (login, profile)

--- a/composer.json
+++ b/composer.json
@@ -111,6 +111,10 @@
     "platform": {
       "php": "7.4"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "phpstan/extension-installer": true,
+      "symfony/flex": true
+    }
   }
 }
