Mailer: replace swiftmail by symfony mailer

--- a/.env.dist
+++ b/.env.dist
@@ -23,14 +23,6 @@ GOOGLE_CLIENT_SECRET=
 ###> sentry/sentry-symfony ###
 SENTRY_DSN=
 ###< sentry/sentry-symfony ###
-
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
-
 GOOGLE_ANALYTICS_ACCOUNT_ID=1234
 
 APP_SITE_NAME=AML87
@@ -41,3 +33,7 @@ GOOGLE_APP_NAME=
 GOOGLE_DEVELOPER_KEY=
 YOUTUBE_USERNAME=
 RECAPTCHA_SITE_KEYy=
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
