--- a/composer.json
+++ b/composer.json
@@ -38,11 +38,11 @@
     "symfony/flex": "^1.6",
     "symfony/form": "*",
     "symfony/framework-bundle": "*",
+    "symfony/mailer": "*",
     "symfony/monolog-bundle": "^3.3",
     "symfony/polyfill-apcu": "^1.6",
     "symfony/security-acl": "^3.0",
     "symfony/security-bundle": "*",
-    "symfony/swiftmailer-bundle": "^3.2",
     "symfony/translation": "*",
     "symfony/twig-bundle": "*",
     "symfony/validator": "*",
