fix(vendor) update symfony vendors

--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,8 @@
     "sort-packages": true,
     "allow-plugins": {
       "phpstan/extension-installer": true,
-      "symfony/flex": true
+      "symfony/flex": true,
+      "php-http/discovery": true
     }
   }
 }
